@@ -241,3 +241,7 @@ immunize_aircraft_against_bombardment = false
 ; population, buildings, and units. This is unlike Conquests artillery targeting, which always goes after units first. Items in the list are separated
 ; by spaces and multi-word items must be wrapped in quotation marks like for perfume specs. Example: [Catapult Cannon Artillery "Radar Artillery"]
 ptw_like_artillery_targeting = []
+
+; Changes the meaning of the charm attack flag to indicate PTW-like targeting. This is a matter of convenience. It allows modders to specify PTW
+; targeting using an editor, instead of the list above, at the cost of losing the charm attack function.
+charm_flag_triggers_ptw_like_targeting = false
